Use multi-stage build
Since we merging build and run into one Dockerfile with multi-stage
build the docker-compose is not required anymore.
It will remove some complexity in order to run in other container
orchestrations. E.g. Kubernetes

- https://docs.docker.com/develop/develop-images/multistage-build/
- https://kubernetes.io/

Signed-off-by: Alexandre Eher <alexandre@eher.com.br>