@@ -1,4 +1,4 @@
-FROM maven:3-jdk-8
+FROM maven:3-jdk-8 as builder
 
 # This will supress any download for dependencies and plugins or upload messages which would clutter the console log.
 # `showDateTime` will show the passed time in milliseconds. You need to specify `--batch-mode` to make this work.
@@ -20,4 +20,15 @@ WORKDIR /ors-core
 # Build and install openrouteservice
 RUN mvn -f ./openrouteservice/pom.xml package -DskipTests 
 
-CMD ORS_VER=$(mvn -f ./openrouteservice/pom.xml -q -Dexec.executable="echo" -Dexec.args='${project.version}' --non-recursive exec:exec) && cp /ors-core/openrouteservice/target/openrouteservice-$ORS_VER.war /ors-core/build/ors.war
+RUN ORS_VER=$(mvn -f ./openrouteservice/pom.xml -q -Dexec.executable="echo" -Dexec.args='${project.version}' --non-recursive exec:exec) && cp /ors-core/openrouteservice/target/openrouteservice-$ORS_VER.war /ors-core/build/ors.war
+
+FROM tomcat:8-jre8
+
+COPY docker/conf/catalina.properties /usr/local/tomcat/conf/catalina.properties
+COPY --from=builder /ors-core/build/ /usr/local/tomcat/webapps/
+
+VOLUME /usr/local/tomcat/data/
+VOLUME /var/log/ors/
+VOLUME /usr/local/tomcat/logs
+
+ENV JAVA_OPTS -Djava.awt.headless=true -server -XX:TargetSurvivorRatio=75 -XX:SurvivorRatio=64 -XX:MaxTenuringThreshold=3 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:ParallelGCThreads=4 -Xms1g -Xmx2g
